<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <include layout="@layout/layout_simple_toolbar" />

    <com.alphawallet.app.widget.FunctionButtonBar
        android:layout_alignParentBottom="true"
        android:id="@+id/layoutButtons"
        android:paddingHorizontal="@dimen/sp17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layoutButtons"
        android:layout_alignParentTop="true"
        android:layout_marginTop="?actionBarSize"
        android:background="@color/background_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="29dp"
            android:paddingTop="10dp"
            android:paddingRight="29dp"
            android:paddingBottom="29dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/value_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="@dimen/dp14"
                    android:layout_marginBottom="@dimen/dp6"
                    android:text="@string/value"
                    android:textColor="#8C8C8C"
                    android:textSize="12sp" />

                <com.alphawallet.app.widget.ChainName
                    android:id="@+id/chain_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:layout_below="@id/value_header"
                    android:background="@drawable/bg_search"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp9">

                    <TextView
                        android:id="@+id/text_operation_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp12"
                        android:layout_marginTop="11dp"
                        android:layout_marginEnd="@dimen/dp12"
                        android:textColor="@color/text_black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:text="Sent" />

                    <TextView
                        android:id="@+id/amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="11dp"
                        android:textColor="@color/text_black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:text="4238793" />

                    <TextView
                        android:id="@+id/failed"
                        style="@style/TransactionDetailsStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp12"
                        android:text="@string/failed"
                        android:textColor="@color/warning_red"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/failedFace"
                        style="@style/TransactionDetailsStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp5"
                        android:text="☹"
                        android:textColor="@color/warning_red"
                        android:visibility="gone" />

                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="@dimen/dp16"
                android:layout_marginBottom="@dimen/dp6"
                android:text="@string/subtitle_transaction_hash_num"
                android:textColor="#8C8C8C"
                android:textSize="12sp" />

            <com.alphawallet.app.widget.CopyTextView
                android:id="@+id/txn_hash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:bold="false"
                custom:gravity="start"
                custom:marginRight="@dimen/dp18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"

                android:layout_marginTop="16dp"
                android:layout_marginBottom="@dimen/dp6"
                android:text="@string/subtitle_network"
                android:textColor="#8C8C8C"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:background="@drawable/bg_search"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/dp9">

                <ImageView
                    android:id="@+id/network_icon"
                    android:layout_width="@dimen/dp24"
                    android:layout_height="@dimen/dp24"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="@dimen/dp5"
                    android:src="@drawable/ic_coin_eth_small" />

                <TextView
                    android:id="@+id/network"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/ethereum"
                    android:textColor="@color/text_black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"

                android:layout_marginBottom="@dimen/dp6"
                android:text="@string/subtitle_from"
                android:textColor="#8C8C8C"
                android:textSize="12sp" />

            <com.alphawallet.app.widget.CopyTextView
                android:id="@+id/from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:bold="false"
                custom:gravity="start" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"

                android:layout_marginTop="16dp"
                android:layout_marginBottom="@dimen/dp6"
                android:text="@string/subtitle_to"
                android:textColor="#8C8C8C"
                android:textSize="12sp" />

            <com.alphawallet.app.widget.CopyTextView
                android:id="@+id/to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:bold="false"
                custom:gravity="start" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/subtitle_block"
                        android:textColor="#8C8C8C"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/block_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#5E5E5E"
                        android:textSize="15sp"

                        android:textStyle="bold"
                        tools:text="4238793" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ProgressBar
                            android:id="@+id/pending_spinner"
                            android:layout_width="@dimen/dp14"
                            android:layout_height="@dimen/dp14"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="6dp"
                            android:contentDescription="@string/empty"
                            android:visibility="gone" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_gas_fee"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/subtitle_gas_used"
                        android:textColor="#8C8C8C"
                        android:textSize="12sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/gas_used"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#5E5E5E"
                            android:textSize="15sp"

                            android:textStyle="bold"
                            tools:text="21,000" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp5"
                            android:text="Gwei"
                            android:textColor="#5E5E5E"

                            android:textSize="15sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/layout_network_fee"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/subtitle_network_fee"
                        android:textColor="#8C8C8C"
                        android:textSize="12sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/network_fee"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#5E5E5E"
                            android:textSize="15sp"
                            android:textStyle="bold"

                            tools:text="0.002" />

                        <TextView
                            android:id="@+id/text_fee_unit"
                            android:layout_width="wrap_content"

                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp5"
                            android:text="@string/eth"
                            android:textColor="#5E5E5E"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_gas_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/title_gas_price"
                        style="@style/TransactionDetailsSubTitleStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/subtitle_gas_price" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/gas_price"
                            style="@style/TransactionDetailsStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="1.2" />

                        <TextView
                            style="@style/TransactionDetailsStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp5"
                            android:text="Gwei" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                style="@style/TransactionDetailsSubTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_transaction_time" />

            <TextView
                android:id="@+id/txn_time"
                style="@style/TransactionDetailsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="September 4, 2017 at 2:32:12 PM" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
