<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_new_wallet"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/splash_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/logo"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp13"
            android:gravity="center_horizontal"
            android:text="CryptoWallet"
            android:textColor="@color/colorPrimary"
            android:textSize="34sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_new_wallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/dp21"
        android:layout_marginEnd="@dimen/dp21"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_create"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/splash_button"
            android:elevation="2dp"
            android:text="@string/create_a_new_wallet"
            android:textAllCaps="true"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_import"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/dp5"
            android:layout_weight="1.0"
            android:background="@drawable/splash_button_grey"
            android:text="Import Wallet"
            android:textColor="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_watch"
                style="@style/Button.Border.Primary"
                android:layout_marginEnd="@dimen/dp5"
                android:layout_weight="1"
                android:text="@string/watch"
                android:visibility="gone" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_buttons_holder_margin_bottom"
            android:visibility="gone"
            custom:cardCornerRadius="@dimen/dp5"
            custom:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/already_label_margin_top">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/already_have_a_wallet"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/sp10" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>
